fix: z-index admin bar

--- a/style.css
+++ b/style.css
@@ -2071,5 +2071,5 @@ img.mfp-img {
 }
 
 #wpadminbar {
-    z-index:99998;
+    z-index:9998;
 }
